<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/menu_archive" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/get_in_touch">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_give"
                android:icon="@drawable/ic_give"
                android:title="@string/nav_give" />

        </menu>
    </item>
</menu>