<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/connect_with_us_during_our_service_times"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/primary_text" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8pt"
        android:padding="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:padding="4dp">


            <TextView
                android:id="@+id/tv_title_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sunday"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/primary_text" />

            <View
                android:id="@+id/divider"
                style="@style/DividerStyle"

                android:layout_below="@id/tv_title_sunday"
                android:background="@color/primary_dark" />

            <LinearLayout
                android:id="@+id/ll_sunday_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/divider"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">


                <TextView
                    android:id="@+id/tv_body_when"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/when_body"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/at"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/tv_body_where"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/FSEC_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />
            </LinearLayout>


            <View
                android:id="@+id/divider2"
                style="@style/DividerStyle"
                android:layout_below="@id/ll_sunday_info"
                android:background="@color/primary_dark" />

            <LinearLayout
                android:id="@+id/ll_action_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider2"
                android:weightSum="2">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/set_a_reminder_to_tune_in"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/get_driving_directions_to_us"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_action_titles"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/ib_reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_secondary_variant"
                    android:contentDescription="@string/reminder"
                    android:src="@drawable/ic_alarm"
                    android:tint="#FFF" />

                <ImageButton
                    android:id="@+id/ib_location"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/primary_dark"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location"
                    android:tint="#FFF" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8pt"
        android:padding="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:padding="4dp">


            <TextView
                android:id="@+id/tv_title_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/primary_text" />

            <View
                android:id="@+id/divider3"
                style="@style/DividerStyle"
                android:layout_below="@id/tv_title_wednesday"
                android:background="@color/primary_dark" />

            <LinearLayout
                android:id="@+id/ll_wed_info"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/divider3"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">


                <TextView
                    android:id="@+id/tv_body_when2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/_6_45_pm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/at"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/tv_body_where2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/ringcentral_meetings"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />
            </LinearLayout>


            <View
                android:id="@+id/divider4"
                style="@style/DividerStyle"
                android:layout_below="@id/ll_wed_info"
                android:background="@color/primary_dark" />

            <LinearLayout
                android:id="@+id/ll_action_titles2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider4"
                android:weightSum="2">

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/set_a_reminder_to_tune_in"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/join_the_call_with_the_link"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_actions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_action_titles2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageButton
                    android:id="@+id/ib_reminder2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/design_default_color_secondary_variant"
                    android:contentDescription="@string/reminder"
                    android:src="@drawable/ic_alarm"
                    android:tint="#FFF" />

                <ImageButton
                    android:id="@+id/ib_location2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/primary_dark"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_url"
                    android:tint="#FFF" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>